# smn_view

./: .gitignore  Cargo.toml
collects/: 01.clt
src/: lib.rs  main.rs
src/io/: io_file.rs  io_path.rs  mod.rs
src/plugins/: mod.rs
src/plugins/plugin_statics/: mod.rs
src/plugins/plugin_ui/: mod.rs
src/server/: mod.rs  server_core.rs
src/server/plugin/: mod.rs  plugin_base.rs  plugin_manager.rs
src/server/structs/: mod.rs  structs_header.rs  structs_mime.rs  structs_request.rs  structs_response.rs
src/util/logging/: logging_color.rs  logging_core.rs  mod.rs
src/window/: mod.rs  window_core.rs
src/window/structs/: mod.rs  struct_windowconfig.rs
statics/: index.html
tools/: build_lib.ps1  build_test.ps1
