[package]
name = "smn_view"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["SummonTheCat"]
description = "A cross-platform web based window framework for Rust"

[dependencies]
wry = "0.19"         
tokio = { version = "1", features = ["full"] }

[lib]
name = "smn_view"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "smn_view_test"
path = "src/main.rs" 